Inspector header and Popup plugin added.